Fixed int/ext storage mount point detection: default to /mnt/sdcard
Reimplemented getServerVersion